Hide HTML & Body overflow-x. Resolves content outside viewport
Content no longer goes outside viewport in mobile devices

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -34,6 +34,11 @@ $slide-bg: $white;            // Background color for the upcoming games slick s
 $sub-nav-heading: $white;     // Font color for h1.page-heading heading of sub-nav
 $nav-link: $white;            // Color for nav-link-main links in mega-nav
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body.landing {
   background-color: $landing-bg;
 }
